--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             
             <div class="social_icons">
                 <div class="icon">
-                    <a href="http://www.linkedin.com/in/joshua-maina-4752a1241" target="_blank">
+                    <a href="www.linkedin.com/in/joshuamaina" target="_blank">
                         <i class="uil uil-linkedin"></i>
                     </a>
                 </div>
@@ -287,7 +287,7 @@
         </div>
         <div class="footer-social-icons">
             <div class="icon">
-                <a href="http://www.linkedin.com/in/joshua-maina-4752a1241" target="_blank">
+                <a href="www.linkedin.com/in/joshuamaina" target="_blank">
                     <i class="uil uil-linkedin"></i>
                 </a>
             </div>
